fixed souns but buffer doesnt reset

--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
         <div class="flex gap-4">
             <div id="healthCounter" class="hud-item bg-black/70 border border-cyan-400 rounded p-2 shadow-inner shadow-cyan-500/30 text-shadow-md">
                 <span class="label uppercase font-bold text-sm">Shields</span>
-                <span class="value text-base ml-2">10</span>
+                <span class="value text-base ml-2"></span>
                 <div class="bar w-16 h-1.5 bg-gray-800 border border-cyan-400 relative overflow-hidden" style="--bar-width: 100%; background: #00ff00;"></div>
             </div>
             <div id="scoreCounter" class="hud-item bg-black/70 border border-cyan-400 rounded p-2 shadow-inner shadow-cyan-500/30 text-shadow-md">
