--- a/public/index.html
+++ b/public/index.html
@@ -266,12 +266,20 @@
         <source src="/assets/lava2.mp4" type="video/mp4">
     </video>
 
-    <a href="https://x.com/Daniel_Farinax" target="_blank" id="twitterLink" class="fixed bottom-4 right-4 bg-[#0a0f1f]/70 border border-cyan-400 rounded-full p-2 text-cyan-400 font-orbitron text-sm hover:bg-cyan-400 hover:text-[#0a0f1f] transition-colors shadow-[0_0_5px_#00ffff] z-20">
-        <svg class="w-6 h-6 inline-block mr-1" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-        </svg>
-        Follow @Daniel_Farinax
-    </a>
+    <div class="fixed bottom-4 right-4 flex gap-2 z-20">
+        <a href="https://x.com/Daniel_Farinax" target="_blank" id="twitterLink" class="bg-[#0a0f1f]/70 border border-cyan-400 rounded-full p-2 text-cyan-400 font-orbitron text-sm hover:bg-cyan-400 hover:text-[#0a0f1f] transition-colors shadow-[0_0_5px_#00ffff]">
+            <svg class="w-6 h-6 inline-block mr-1" fill="currentColor" viewBox="0 0 24 24">
+                <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+            </svg>
+            Follow @Daniel_Farinax
+        </a>
+        <a href="https://www.buymeacoffee.com/yourusername" target="_blank" id="coffeeLink" class="bg-[#0a0f1f]/70 border border-cyan-400 rounded-full p-2 text-cyan-400 font-orbitron text-sm hover:bg-cyan-400 hover:text-[#0a0f1f] transition-colors shadow-[0_0_5px_#00ffff]">
+            <svg class="w-6 h-6 inline-block mr-1" fill="currentColor" viewBox="0 0 24 24">
+                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15.93V15h2v2.93c-1.65-.17-2.97-1.49-3.14-3.14H8v-2h1.86c.17-1.65 1.49-2.97 3.14-3.14V7h-2v2.93c-1.65-.17-2.97-1.49-3.14-3.14H6v-2h1.86C8.03 3.14 9.35 1.82 11 1.65V4h2V1.65c1.65.17 2.97 1.49 3.14 3.14H18v2h-1.86c-.17 1.65-1.49 2.97-3.14 3.14V11h2v-2.93c1.65.17 2.97 1.49 3.14 3.14H20v2h-1.86c-.17 1.65-1.49 2.97-3.14 3.14V15h-2v2.93c-1.65-.17-2.97-1.49-3.14-3.14H10v2h1z"/>
+            </svg>
+            Buy me a coffee
+        </a>
+    </div>
     <script type="module" src="/dist/app.js"></script>
 </body>
 </html>
