--- a/public/index.html
+++ b/public/index.html
@@ -273,7 +273,7 @@
             </svg>
             Follow @Daniel_Farinax
         </a>
-        <a href="https://www.buymeacoffee.com/yourusername" target="_blank" id="coffeeLink" class="bg-[#0a0f1f]/70 border border-cyan-400 rounded-full p-2 text-cyan-400 font-orbitron text-sm hover:bg-cyan-400 hover:text-[#0a0f1f] transition-colors shadow-[0_0_5px_#00ffff]">
+        <a href="https://www.buymeacoffee.com/daniel_farinax" target="_blank" id="coffeeLink" class="bg-[#0a0f1f]/70 border border-cyan-400 rounded-full p-2 text-cyan-400 font-orbitron text-sm hover:bg-cyan-400 hover:text-[#0a0f1f] transition-colors shadow-[0_0_5px_#00ffff]">
             <svg class="w-6 h-6 inline-block mr-1" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 15.93V15h2v2.93c-1.65-.17-2.97-1.49-3.14-3.14H8v-2h1.86c.17-1.65 1.49-2.97 3.14-3.14V7h-2v2.93c-1.65-.17-2.97-1.49-3.14-3.14H6v-2h1.86C8.03 3.14 9.35 1.82 11 1.65V4h2V1.65c1.65.17 2.97 1.49 3.14 3.14H18v2h-1.86c-.17 1.65-1.49 2.97-3.14 3.14V11h2v-2.93c1.65.17 2.97 1.49 3.14 3.14H20v2h-1.86c-.17 1.65-1.49 2.97-3.14 3.14V15h-2v2.93c-1.65-.17-2.97-1.49-3.14-3.14H10v2h1z"/>
             </svg>
